22 March 2001: [v1.0.0]
	KLlinear Library ported to RedHat Linux

24 April 2001: [v1.0.1]
	Makefile maintenance: specified gzip suffix.

15 November 2001: [v1.0.2]
	Fix Makefile. Install section wasn't creating directories.

23 September 2003: [v1.0.3]
	Improved Makefile. Added an install-src rule.

24 February 2006: [v1.0.4]
	add install-all rule. add PKGNAME. run ranlib on lib after installation
	because of Darwin ld. no shared lib for macosx.