@@ -14,8 +14,9 @@ MAKE = make
 GZIP = gzip -S .gz
 
 #### Environment Variable Definitions ####
-OS = macosx
-PREFIX = /Users/klabrie/prgc
+UNAME = `uname -s`
+OS = redhat
+PREFIX = $(HOME)/prgc
 INCLDIR = $(PREFIX)/include
 LIBDIR = $(PREFIX)/lib
 
@@ -35,7 +36,7 @@ PKGNAME = KLlinear
 BASIC_FILES = Makefile Changes TODO
 DOCS = doc.txt
 VERSION = 1
-RELEASE = $(VERSION).0.4
+RELEASE = $(VERSION).0.5
 
 #### Object Definitions ####
 OBJECTS = dgauss.o dgaussj.o
@@ -70,14 +71,12 @@ install-lib :
 	install -m 0644 lib$(PKGNAME).a $(LPREFIX)/lib/
 	install -d -m 0755 $(IPREFIX)/include
 	install -m 0644 $(HEADERS) $(IPREFIX)/include/
-	ranlib $(LPREFIX)/lib/lib$(PKGNAME).a
 
 install-shared :
 	install -d -m 0755 $(LPREFIX)/lib
 	install -m 0755 lib$(PKGNAME).so.$(RELEASE) $(LPREFIX)/lib/
 	/sbin/ldconfig -n $(LPREFIX)/lib/
-	ln -sf $(LPREFIX)/lib/lib$(PKGNAME).so.$(RELEASE) \
-           $(LPREFIX)/lib/lib$(PKGNAME).so
+	ln -sf lib$(PKGNAME).so.$(VERSION) $(LPREFIX)/lib/lib$(PKGNAME).so
 	install -d -m 0755 $(IPREFIX)/include
 	install -m 0644 $(HEADERS) $(IPREFIX)/include/
 
