@@ -1,1 +1,2 @@
 - Are docs up-to-date?
+- Use UNAME to set OS.
