@@ -13,3 +13,6 @@
 24 February 2006: [v1.0.4]
 	add install-all rule. add PKGNAME. run ranlib on lib after installation
 	because of Darwin ld. no shared lib for macosx.
+22 May 2006: [v1.0.5]
+	Use HOME to set PREFIX. Unable to use UNAME to set OS, yet; added
+	to TODO.  Clean up link to shared library.
